clang/test/BSC/Negative/Trait/GenericTrait/trait_cast_trait/trait_cast_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
  T foo(This *this);
};
_Trait G<T> {};

void test() {
  _Trait G<int> *g;
  _Trait F<int> *q = g; // expected-error {{expected a pointer type which has implemented '_Trait F<int>', found '_Trait G<int> *'}}
  _Trait F<int> *q1 = (_Trait F<int> *)g; // expected-error {{expected a pointer type which has implemented '_Trait F<int>', found '_Trait G<int> *'}}
  q = g; // expected-error {{assigning to 'struct __Trait_F<int>' from incompatible type '_Trait G<int> *'}}
  q1 = (_Trait F<int> *)g; // expected-error {{assigning to 'struct __Trait_F<int>' from incompatible type '_Trait G<int> *'}}
}